@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-08T16:30:56Z",
-  "count" : 17,
-  "count_minmax" : [ 16, 17 ],
-  "count_decinc" : [ -0, +17 ],
+  "timestamp" : "2022-08-09T02:08:57Z",
+  "count" : 18,
+  "count_minmax" : [ 16, 18 ],
+  "count_decinc" : [ -0, +18 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
