@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-08T16:30:56Z",
+  "timestamp" : "2022-08-09T02:08:57Z",
   "count_outdated" : 421,
   "uniques_outdated" : 88,
-  "count" : 472,
+  "count" : 473,
   "uniques" : 98,
   "views" : [
     {
@@ -49,8 +49,8 @@
     },
     {
       "timestamp": "2022-08-08T00:00:00Z",
-      "count": 17,
-      "count_minmax": [ 16, 17 ],
+      "count": 18,
+      "count_minmax": [ 16, 18 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
     }
