@@ -1,5 +1,5 @@
 {
-  "count": 51,
+  "count": 52,
   "uniques": 5,
   "views": [
     {
@@ -34,7 +34,7 @@
     },
     {
       "timestamp": "2022-08-08T00:00:00Z",
-      "count": 17,
+      "count": 18,
       "uniques": 2
     }
   ]
